# PSP-UAE4ALL

./: CMakeLists.txt  Makefile.psp
.github/workflows/: c-cpp.yml
data/: Thumbs.db  colors.txt
src/: custom.c  drawing.c  gui.c  main.c  pspincludes.h  sdlgfx.c  sound.c  sysconfig.h
src/include/: fpp-ieee-be.h  md-fpp.h  sysdeps.h
src/m68k/fame/: famec.c  m68k_intrf.c
src/m68k/uae/: fpp.c  newcpu.c  newcpu.h
src/menu/: menu.c  menu_load.c  menu_main.c  msg.h
src/vkbd/: vkbd.c
